# solana-paid-ad-notifications

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: anchor-build.yml  deploy-pages.yml  openclaw-notify.yml
docs/: ARCHITECTURE.md  CI_DEPENDENCY_PINNING.md  CONTRACT_DEVNET_MINIMAL.md  PODCAST_FEEDBACK_2026-04-21.md  PRD.md  ROADMAP.md  SRD.md  TECH_STACK_AND_MVP_ROADMAP.md
docs/diagrams/: dataflow.md
migrations/: deploy.ts
programs/paid_ad_notifications/: Cargo.toml
programs/paid_ad_notifications/src/: lib.rs
tests/: paid-ad-notifications.ts
web/: agent-skill.html  index.html  main.js  wallet-app.js
web25/: server.js
web25/data/: db.json
web25/public/: app.js  index.html  wallet-app.html
